[gd_scene load_steps=6 format=2]

[ext_resource path="res://Temporary Clipart/speech.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Baby.gd" type="Script" id=2]
[ext_resource path="res://Temporary Clipart/gertrude.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 41, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 173, 158.5 )

[node name="Baby" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 25 )
shape = SubResource( 1 )

[node name="Speech" type="TextureRect" parent="."]
visible = false
margin_left = -93.0
margin_top = -108.0
margin_right = 502.0
margin_bottom = 410.0
rect_scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Speech"]
anchor_left = -0.114
anchor_top = 0.446
anchor_right = -0.114
anchor_bottom = 0.446
margin_left = 207.83
margin_top = -81.028
margin_right = 257.83
margin_bottom = -67.028
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press A to talk"
align = 1

[node name="Timer" type="Timer" parent="Speech"]
wait_time = 3.0
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -7, 17.5 )
shape = SubResource( 2 )

[connection signal="timeout" from="Speech/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
